<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="app_name">Safacation</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="health_guidance">Health Guidance</string>
    <string name="deskripsi">Deskripsi lokasi</string>
    <string-array name="nama_lokasi">
        <item>Taman Kota Pekanbaru</item>
        <item>Taman Agrowisata Tenayan Raya</item>
        <item>Taman Rekreasi Alam Mayang</item>
        <item>Wisata Danau Buatan</item>
        <item>Asia Farm Hayday</item>
        <item>Citraland Waterpark</item>
        <item>Labersa Water Park Riau fantasi</item>
        <item>Wisata Dakwah Okura</item>
        <item>Nayla Green Valley</item>
        <item>Masjid Raya An-Nur Provinsi Riau</item>
    </string-array>
    <string-array name="alamat_lokasi">
        <item>Kp.Bandar, Kec.Senapelan, Kota Pekanbaru, Riau</item>
        <item>Jl.Kadiran, Kulim, Kec.Tenayan Raya, Kota Pekanbaru, Riau</item>
        <item>Jl.Imam Munandar, Tengkerang Tim, Kec.Tenayan Raya, Kota Pekanbaru, Riau</item>
        <item>Lembah Sari, Kec.Rumbai Pesisir, Kota Pekanbaru, Riau</item>
        <item>Jl.Badak Ujung, Sail, Kec.Tenayan Raya, Kota Pekanbaru, Riau</item>
        <item>CTengkerang Barat, Kec.Marpoyan Damai, Kota Pekanbaru, Riau</item>
        <item>Jl.Labersa, Simpang Tiga, Kec.Siak Hulu, Kabupaten Kampar, Riau</item>
        <item>Jl.Raja Panjang Okura, Tebing Tinggi Okura, Kec.Rumbai Pesisir, Kota Pekanbaru, Riau</item>
        <item>Muara Fajar, Kec. Rumbai, Kota Pekanbaru, Riau</item>
        <item>Jl. Hangtuah Ujung, Sumahilang, Kec.Pekanbaru Kota, Kota Pekanbaru, Riau</item>
    </string-array>
    <string-array name="deskripsi_lokasi">
        <item>Taman Kota yang letaknya tepat berada di Samping Hotel Aryaduta Kota Pekanbaru ini selalu ramai dikunjungi warga, terutama saat liburan.</item>
        <item>Agrowisata Tenayan Raya ini letaknya tidak terlalu jauh dari pusat kota Pekanbaru. Berada di Jalan Kadiran, Kelurahan Sialang Rampai, Kecamatan Tenayan Raya, Kota Pekanbaru, agrowisata ini telah berdiri sejak tahun 2013 </item>
        <item>Wisata Alam Mayang Pekanbaru merupakan salah satu wisata rekreasi andalan milik Kota Pekanbaru. Sama seperti Kebun Raya Bogor dan taman bermain lainnya, wisata Alam Mayang ini selalu ramai dikunjungi saat akhir pekan atau saat liburan tiba. Wisata Alam Mayang yang berada di pusat Kota Pekanbaru ini banyak menyediakan fasilitas hiburan untuk keluarga.</item>
        <item>Danau Buatan ini berada di Jalan Pramuka / Jalan Lingkar Danau Buatan, Kelurahan Lembah Sari, Kecamatan Rumbai Timur.</item>
        <item>Asia Farm resmi dibuka sejak tanggal 21 April 2019 dapat merasakan sensasi seperti berada di luar negeri. </item>
        <item>Citraland Waterpark Pekanbaru dibangun di atas lahan seluas 1 hektare. Lokasinya terbilang strategis, berdiri megah di tengah kota.</item>
        <item>Labersa riau fantasi merupakan tempat hiburan dan wisata yang mempunyai luas sekitar 8 Ha memiliki wahana waterpark dan wahana thempark.</item>
        <item>Wisata Dakwah Okura mengusung konsep wisata syariah yang mengangkat kebiasaan yang disunnahkan oleh Rasulullah SAW yakni berkuda, memanah dan berenang.</item>
        <item>Objek wisata Nayla Green Valley terletak di Jalan Garuda KM 8 Jalan Belidang dekat Pesantren Ibnu Katsir Muara Fajar Rumbai Pekanbaru. Di sana, banyak fasilitas yang bisa dinikmati bersama keluarga dan orang-orang tersayang.</item>
        <item>Masjid Raya An Nur merupakan sebuah masjid yang terletak di Pekanbaru, Indonesia. Masjid ini dibangun pada tahun 1963 dan selesai pada tahun 1968. Masjid yang di ibukota Provinsi Riau, Pekanbaru tersebut saat ini merupakan salah satu yang termegah di Indonesia.</item>
    </string-array>
    <string name="jadwal_buka">Jadwal buka</string>
    <string-array name="review_1_1">
        <item>Susilo Atmaji</item>
        <item>Tempat Rehat sejenak sebelum melanjutkan perjalanan</item>
    </string-array>
    <string-array name="review_1_2">
        <item>Guntur yudha Prawira</item>
        <item>Tempat santai dan bermain dengan anak</item>
    </string-array>
    <string-array name="review_2_1">
        <item>MD chanel24</item>
        <item>Cocok buat anak-anak dan keluarga tercinta edukasi tentang alam</item>
    </string-array>
    <string-array name="review_2_2">
        <item>huda anshori</item>
        <item>Bagus dalam pengembangan Edukasi bagi Anak dan keluarga</item>
    </string-array>
    <string-array name="review_3_1">
        <item>ROHUL SENO</item>
        <item>Tempatnya semakin bersih dan nyaman, Cocok untuk refresing Keluarga</item>
    </string-array>
    <string-array name="review_3_2">
        <item>RB IWAN</item>
        <item>Luas,asri,murah ticketnya dan bersih. Cocok untuk rekreasi keluarga</item>
    </string-array>
    <string-array name="review_4_1">
        <item>Fajar Yudarma</item>
        <item>Tempat wisata sekaligus tempat rekreasi bagi keluarga dan teman-teman yg hobi memancing</item>
    </string-array>
    <string-array name="review_4_2">
        <item>Supriyono Supriyono</item>
        <item>Wisata murah untuk keluarga. Bisa mancing di lokasi</item>
    </string-array>
    <string-array name="review_5_1">
        <item>Dewi Wahyuni</item>
        <item>Cocok buat liburan keluarga, edukasi dan hiburan</item>
    </string-array>
    <string-array name="review_5_2">
        <item>Rianty RiaNty</item>
        <item>Cukup bagus buat edukasi dan hiburan anak...terus dikembangkan yah</item>
    </string-array>
    <string-array name="review_6_1">
        <item>Ruslina Alidar</item>
        <item>Mantap, dan memuaskan untuk liburan bawa keluarga  cocok banget... Aman</item>
    </string-array>
    <string-array name="review_6_2">
        <item>Femusara 12</item>
        <item>Water park yg tidak terlalu luas tapi cukup nyaman untuk liburan keluarga</item>
    </string-array>
    <string-array name="review_7_1">
        <item>Devha metika sofia de</item>
        <item>Wahana yang menegangkan,membuat saya ketagihan.</item>
    </string-array>
    <string-array name="review_7_2">
        <item>ryan kido</item>
        <item>Wahana bermain yg seru di kota Pekanbaru</item>
    </string-array>
    <string-array name="review_8_1">
        <item>Yendri Ikhlas Fernando</item>
        <item>Saya pernah kesini. Bagus untuk olahraga islami yakni berkuda dan memanah. Bisa kursys berkuda atau hanya tes naik.</item>
    </string-array>
    <string-array name="review_8_2">
        <item>Siti Aisyah Rahmi</item>
        <item>Tempat wisata olahraga sunnah terbaik..</item>
    </string-array>
    <string-array name="review_9_1">
        <item>Ali Bakri</item>
        <item>Tempat mancing bisa harian dan kiloan, cocok bawa keluarga sekaligus refresing</item>
    </string-array>
    <string-array name="review_9_2">
        <item>Edi Mak Itam</item>
        <item>Sungguh memanjakan mata.. Rugi tak datang..</item>
    </string-array>
    <string-array name="review_10_1">
        <item>Risang Aji</item>
        <item>bagus dan sangat nyaman</item>
    </string-array>
    <string-array name="review_10_2">
        <item>Iqbal Suliansyah</item>
        <item>Arsitekturnya menarik dan unik. Ini mesjid yang bersih dan nyaman juga.Tempatnya strategis dan halaman luas.</item>
    </string-array>
    <string-array name="data_bintang">
        <item>4.5</item>
        <item>4.1</item>
        <item>4.1</item>
        <item>4.1</item>
        <item>3.8</item>
        <item>4.5</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.5</item>
        <item>4.8</item>
    </string-array>
    <string name="health_1">Cuci Tangan</string>
    <string name="health_2">Ya Jaga Jarak</string>
    <string name="health_3">Makan Vitamin</string>
    <string name="health_deskripsi_1">Untuk menghindari penularan penyakit melalui tangan. Untuk menjaga kebersihan diri (perorangan) Untuk membuat tubuh kita tetap sehat dan bugar. Supaya tidak menjadi agen penularan bibit penyakit kepada orang lain.</string>
    <string name="health_deskripsi_2">Menjaga jarak atau physical distancing, sebagai bagian dari protokol kesehatan dalam upaya pencegahan penyebaran COVID-19 menjadi penting untuk dilakukan. Sebagaimana menurut rekomendasi dari Badan Kesehatan Dunia (WHO)</string>
    <string name="health_deskripsi_3">Vitamin memiliki berbagai fungsi yang membantu mengatur metabolisme, mencegah penyakit kronis (seperti penyakit jantung dan kanker) dan untuk memelihara nafsu makan, kesehatan mental dan kekebalan tubuh.</string>
    <string name="detail_photo">Detail photo</string>
    <string name="star_review">Star review</string>
    <string name="dibuka">DIBUKA</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="test">Test</string>
</resources>