<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/detail_photo_pager"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:alpha="0.8"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@id/detail_photo_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/detail_photo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="4dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="2 / 3" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/detail_photo_pager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/detail_status"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/dibuka" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="36sp"
                tools:text="Nama Lokasi" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:src="@drawable/ic_starreview_1"
                android:contentDescription="@string/star_review"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginVertical="8dp"
                tools:text="Alamat Lokasi" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/jadwal_buka" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="Setiap hari (08:00-00:00)" />

            <View
                android:layout_marginVertical="20dp"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="?android:attr/listDivider"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

